tests/invalid/builtin_proc.err_exp
builtin_proc.m:019: In clause for predicate `foo'/2:
builtin_proc.m:019:   error: undefined predicate `builtin.no_such_pred'/2.
